# flow

./: .gitignore  CHANGELOG.md  README.md  flow-lang.cabal
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs
docs/: tutorial.md
src/: ApplyBaseParser.hs  BaseParser.hs  Intermediate.hs  Interpreter.hs  Node.hs  PEGParser.hs  Parser.hs  PipelineProcessor.hs  Primitives.hs  Runner.hs  Syntax.hs  SyntaxSugar.hs  Types.hs
static/: runtime.js
