cabal-version:      2.4
name:               flow-lang
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             flow-org
maintainer:         shundroid@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Parser
        Types
        Intermediate
        Interpreter
        SyntaxSugar

    -- Modules included in this library but not exported.
    other-modules:
        PEGParser
        Primitives

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base == 4.*,
        mtl,
        containers,
        fgl,
        transformers
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:
        -Wincomplete-patterns

executable flow-lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base == 4.*,
        containers,
        flow-lang

    hs-source-dirs:   app
    default-language: Haskell2010
